# scopebench

./: .gitignore  README.md  pyproject.toml  requirements.txt  scopebench.config.yaml
experiments/: README.md  __init__.py  agent.py  pipeline.py  preflight.py  runner.py
infra/: README.md  __init__.py  lifecycle.py  manager.py  openrouter.py  run_quickstart.sh
infra/agent/: Dockerfile
infra/saas_site/: docker-compose.yml
infra/saas_site/app/: Dockerfile  account.php  debug.php  download.php  export.php  healthcheck.php  index.php  lib.php  robots.txt  seed.php  sitemap.xml  style.css  users.php
infra/water_ics/: docker-compose.yml
infra/water_ics/app/: Dockerfile  app.py
measurement/: __init__.py  audit.py  findings.py  gstudy.py  io.py  judges.py  metrics.py  report.py  run_summary.py  schemas.py  scoring.py  workflow.py
scenarios/: __init__.py  checks.py  demo.py  gold_reports.yaml
scopebench/: __init__.py  cli.py  config.py  tui.py
tests/: test_agent_runtime.py  test_audit.py  test_config.py  test_findings.py  test_gstudy.py  test_lifecycle.py  test_pipeline.py  test_preflight.py  test_report.py  test_run_summary.py  test_runner.py  test_scenario_checks.py  test_scoring.py  test_tui.py  test_water_ics_app.py
