[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scopebench"
version = "0.1.0"
description = "Baseline measurement code for safe autonomous penetration-testing evaluations."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.3,<7"]

[tool.setuptools.packages.find]
include = ["scopebench*", "measurement*", "scenarios*", "infra*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
